--- a/config.ini
+++ b/config.ini
@@ -1,17 +1,20 @@
 [strings]
-# Mode : train, test, serve
+# Mode : train, test
 mode = train
 train_data = train_data
 #训练集路径
 dataset_train_image_path = data/train/
+dataset_test_image_path = data/test/
+dataset_gan_image_path = data/gan/
 #模型
 checkpoint_dir = model_data/
 [ints]
 batch_size = 4
 steps = 10000
-image_width = 256
-image_height = 256
+image_width = 128
+image_height = 128
 image_channels = 3
+psnr = 20
 [floats]
 learning_rate = 0.0001
 beta_1 = 0.9
