--- a/config.ini
+++ b/config.ini
@@ -8,15 +8,16 @@ dataset_test_image_path = data/test/
 dataset_gan_image_path = data/gan/
 #模型
 checkpoint_dir = model_data/
+#日志
+writer=logs/
 [ints]
-batch_size = 4
-steps = 10000
+batch_size = 8
+steps = 20000
 image_width = 128
 image_height = 128
 image_channels = 3
 psnr = 20
 [floats]
-learning_rate = 0.0001
-beta_1 = 0.9
-beta_2 = 0.999
+learning_rate = 0.0002
+beta_1 = 0.5
 lambda = 0.001
