修改文件夹路径

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [strings]
 # Mode : train, test
 mode = train
-train_data = train_data
+train_data = data
 #训练集路径
 dataset_train_image_path = data/train/
 dataset_test_image_path = data/test/
@@ -9,7 +9,7 @@ dataset_gan_image_path = data/gan/
 #模型
 checkpoint_dir = model_data/
 #日志
-writer=logs/
+writer = logs/
 [ints]
 batch_size = 8
 steps = 20000
